--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,19 @@
+# 💻 Tên ứng dụng
 spring.application.name=WebsiteBanCayCanh
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=BAN_CAYCANH;encrypt=false;trustServerCertificate=true
-spring.datasource.username=sa
-spring.datasource.password=123
 
+# 🌐 KẾT NỐI DATABASE ONLINE SOMEECOM
+spring.datasource.url=jdbc:sqlserver://BanCayCanh.mssql.somee.com;databaseName=BanCayCanh;encrypt=true;trustServerCertificate=true
+spring.datasource.username=Tramhuong_SQLLogin_1
+spring.datasource.password=t16ddujc6t
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+# ⚙️ Cấu hình JPA
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
-# Ngăn Hibernate tự chuyển CamelCase thành snake_case
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+# ✉️ CẤU HÌNH GỬI MAIL (nếu bạn có tính năng xác nhận email)
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=yourcompanyemail@gmail.com
