--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=WebsiteBanCayCanh
 
 # 🌐 KẾT NỐI DATABASE ONLINE SOMEECOM
-spring.datasource.url=jdbc:sqlserver://BanCayCanh.mssql.somee.com;databaseName=BanCayCanh;encrypt=true;trustServerCertificate=true
+spring.datasource.url=jdbc:sqlserver://BanCayCanh.mssql.somee.com:1433;database=BanCayCanh;encrypt=false;trustServerCertificate=true
 spring.datasource.username=Tramhuong_SQLLogin_1
 spring.datasource.password=t16ddujc6t
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
