--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,16 @@
-# 💻 Tên ứng dụng
-spring.application.name=WebsiteBanCayCanh
-
-# 🌐 KẾT NỐI DATABASE ONLINE SOMEECOM
-spring.datasource.url=jdbc:sqlserver://BanCayCanh.mssql.somee.com;database=BanCayCanh;encrypt=false;trustServerCertificate=true
+spring.datasource.url=jdbc:sqlserver://BanCayCanh.mssql.somee.com:1433;Database=BanCayCanh;encrypt=false;trustServerCertificate=true;
 spring.datasource.username=Tramhuong_SQLLogin_1
 spring.datasource.password=t16ddujc6t
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
-# ⚙️ Cấu hình JPA
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-# ✉️ CẤU HÌNH GỬI MAIL (nếu bạn có tính năng xác nhận email)
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=yourcompanyemail@gmail.com
-spring.mail.password=YOUR_APP_PASSWORD
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+spring.datasource.hikari.maximum-pool-size=2
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.idle-timeout=10000
+spring.datasource.hikari.max-lifetime=30000
