--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,49 @@
-spring.datasource.url=jdbc:sqlserver://BanCayCanh.mssql.somee.com:1433;Database=BanCayCanh;encrypt=false;trustServerCertificate=true;
+# =======================
+#   DATABASE SOMEECOM
+# =======================
+spring.datasource.url=jdbc:sqlserver://BanCayCanh.mssql.somee.com:1433;Database=BanCayCanh;encrypt=false;trustServerCertificate=true
 spring.datasource.username=Tramhuong_SQLLogin_1
 spring.datasource.password=t16ddujc6t
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
+# =======================
+#       JPA
+# =======================
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
+# (Dialect SQL Server — KHÔNG CẦN, nhưng giữ lại không sao)
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+
+# =======================
+#     HIKARI POOL
+# =======================
 spring.datasource.hikari.maximum-pool-size=2
 spring.datasource.hikari.minimum-idle=1
 spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.idle-timeout=10000
 spring.datasource.hikari.max-lifetime=30000
+
+# =======================
+#     TẮT MAIL (để tránh crash)
+# =======================
+spring.mail.host=disabled
+spring.mail.username=disabled
+spring.mail.password=disabled
+
+# Nếu muốn gửi mail thì ghi:
+# spring.mail.host=smtp.gmail.com
+# spring.mail.port=587
+# spring.mail.username=YOUR_GMAIL
+# spring.mail.password=YOUR_APP_PASSWORD (16 ký tự)
+# spring.mail.properties.mail.smtp.auth=true
+# spring.mail.properties.mail.smtp.starttls.enable=true
+
+# =======================
+#     THYMELEAF / DEVTOOLS
+# =======================
+spring.thymeleaf.cache=false
+spring.web.resources.cache.period=0
+spring.devtools.restart.enabled=true
